--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Benjamindev.GitHub.io by BenjaminDev</title>
+    <meta name="description" content="Benjamindev.GitHub.io : Software as a tool  ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Benjamindev.GitHub.io</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Benjamindev.GitHub.io</h1>
-        <p>Software as a tool  </p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/BenjaminDev">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/BenjaminDev">View My GitHub Profile</a></p>
+          <h1 id="project_title">Benjamindev.GitHub.io</h1>
+          <h2 id="project_tagline">Software as a tool  </h2>
 
-      </header>
-      <section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a id="welcome-benjamindev" class="anchor" href="#welcome-benjamindev" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome benjaminDev</h3>
 
@@ -30,11 +34,16 @@
 
 <p>My interests are in... </p>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
