--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Benjamindev.GitHub.io : Software as a tool  ">
+    <title>Benjamindev.GitHub.io by BenjaminDev</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Benjamindev.GitHub.io</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Benjamindev.GitHub.io</h1>
+        <p>Software as a tool  </p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/BenjaminDev">View on GitHub</a>
 
-          <h1 id="project_title">Benjamindev.GitHub.io</h1>
-          <h2 id="project_tagline">Software as a tool  </h2>
+        <p class="view"><a href="https://github.com/BenjaminDev">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>
 <a id="welcome-benjamindev" class="anchor" href="#welcome-benjamindev" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome benjaminDev</h3>
 
 <p>This is a collection of my work and side projects. Unfortunately most is still private. I hope to do work that is open but as of now that is how it is.</p>
 
-<p>My interests are in... </p>
-      </section>
-    </div>
+<p>My interests are in:</p>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+<ul>
+<li>Image Processing</li>
+<li>Digital Signal Processing</li>
+<li>Radar</li>
+<li>Anything Software related</li>
+<li>Visualizations</li>
+<li>Outdoor activities: Rock climbing, mountain biking, surfing.</li>
+</ul>
+
+<p>Skill Set:</p>
+
+<ul>
+<li>C++, Python, C#, Matlab</li>
+<li>TDD (gtest), Git</li>
+</ul>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
