--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Benjamindev.GitHub.io by BenjaminDev</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Benjamindev.GitHub.io</h1>
-        <p>Software as a tool  </p>
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
+  <title>Benjamindev.GitHub.io</title>
+  <meta name="description" content="Software as a tool  ">
 
-        <p class="view"><a href="https://github.com/BenjaminDev">View My GitHub Profile</a></p>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-      </header>
-      <section>
-        <h3>
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Benjamindev.GitHub.io</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Software as a tool  </p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/BenjaminDev" class="code">View Benjamindev.GitHub.io on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h3>
 <a id="welcome-benjamindev" class="anchor" href="#welcome-benjamindev" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome benjaminDev</h3>
 
 <p>This is a collection of my work and side projects. Unfortunately most is still private. I hope to do work that is open but as of now that is how it is.</p>
@@ -45,12 +56,26 @@
 <li>C++, Python, C#, Matlab</li>
 <li>TDD (gtest), Git</li>
 </ul>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+        </article>
+      </div>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+    <footer>
+      <div class="owner">
+
+      <p><a href="https://github.com/BenjaminDev" class="avatar"><img src="https://avatars1.githubusercontent.com/u/11699155?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/BenjaminDev">BenjaminDev</a> on <a href="https://www.github.com">GitHub</a></p>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/BenjaminDev/benjaminDev.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/BenjaminDev/benjaminDev.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
