Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
 <p>This is a collection of my work and side projects. Unfortunately most is still private. I hope to do work that is open but as of now that is how it is.</p>
 
+<p>I'm currently doing my MSc at the University of Cape Town. Some of my results can be seen <a href="https://www.youtube.com/watch?v=UMq8xxmfccs">here</a> more to come in October...</p>
+
 <p>My interests are in:</p>
 
 <ul>
