--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <li>Image Processing</li>
 <li>Digital Signal Processing</li>
 <li>Radar</li>
+<li>Probabilistic Graphical Models</li>
+<li>Neural Networks</li>
 <li>Anything Software related</li>
 <li>Visualizations</li>
 <li>Outdoor activities: Rock climbing, mountain biking, surfing.</li>
@@ -44,7 +46,7 @@
 <p>Skill Set:</p>
 
 <ul>
-<li>C++, Python, C#, Matlab</li>
+<li>C++, Python, C#, Matlab, NodeJS, Java(android), Swift</li>
 <li>TDD (gtest), Git</li>
 </ul>
       </section>
